Fix timetable overlap, toggle clashes

--- a/app/assets/stylesheets/timetable.css
+++ b/app/assets/stylesheets/timetable.css
@@ -29,14 +29,20 @@
 }
 
 #timetable tbody td {
+	vertical-align: top;
 	border-bottom: 1px solid #e5e5e5;
 	height: 10em;
 	padding: 0;
 }
 
+#timetable .period-filler {
+	height: 10em;
+	width: 100%;
+}
+
 #timetable .period {
 	position: relative;
-	height: 100%;
+	height: inherit;
 	border-radius: .25rem;
 	background-color: #e5e5e5;
 	box-shadow: 0px 0px 0px 1px #999999;
@@ -51,30 +57,34 @@
 	display: block;
 }
 
-#timetable .period.t030 { width: 100%; }
-#timetable .period.t100 { width: 200%; }
-#timetable .period.t130 { width: 300%; }
-#timetable .period.t200 { width: 400%; }
-#timetable .period.t230 { width: 500%; }
-#timetable .period.t300 { width: 600%; }
+#timetable .period.mins-30 { width: 100%; }
+#timetable .period.mins-60 { width: 200%; }
+#timetable .period.mins-90 { width: 300%; }
+#timetable .period.mins-120 { width: 400%; }
+#timetable .period.mins-150 { width: 500%; }
+#timetable .period.mins-180 { width: 600%; }
+#timetable .period.mins-210 { width: 700%; }
+#timetable .period.mins-240 { width: 800%; }
+#timetable .period.mins-270 { width: 900%; }
+#timetable .period.mins-300 { width: 1000%; }
 
-#timetable .period.style-faded {
+
+#timetable .style-hidden {
+	display: none;
+}
+#timetable .style-faded {
 	opacity: 0.5;
 	filter: alpha(opacity=50);
 }
-#timetable .period.style-hidden {
-	visibility: hidden;
-}
-#timetable .period.style-selected {
-	visibility: visible;
+#timetable .style-selected {
+	display: block;
 	opacity: 1.0;
 	filter: alpha(opacity=100);
 }
-#timetable .period.style-highlight {
-	visibility: visible;
+#timetable .style-highlight {
 	background-color: #5bc0de;
 	box-shadow: 0px 0px 0px 1px #0275d8;
 }
-#timetable .period.style-selected.style-highlight {
+#timetable .style-selected.style-highlight {
 	color: #ffffff;
 }
